--- a/style.css
+++ b/style.css
@@ -8,187 +8,312 @@
 /* Your images should be linked as if the CSS file sits in the same folder as the images. ie. no paths. */
 
 
-/* basic elements */
-html {
-	margin: 0;
-	padding: 0;
-	}
-body { 
-	font: 75% georgia, sans-serif;
-	line-height: 1.88889;
-	color: #555753; 
-	background: #fff url(blossoms.jpg) no-repeat bottom right; 
-	margin: 0; 
-	padding: 0;
-	}
-p { 
-	margin-top: 0; 
-	text-align: justify;
-	}
-h3 { 
-	font: italic normal 1.4em georgia, sans-serif;
-	letter-spacing: 1px; 
-	margin-bottom: 0; 
-	color: #7D775C;
-	}
-a:link { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #B7A5DF;
-	}
-a:visited { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #D4CDDC;
-	}
-a:hover, a:focus, a:active { 
-	text-decoration: underline; 
-	color: #9685BA;
-	}
-abbr {
-	border-bottom: none;
-	}
+body{
+	margin:0;
+	background-image:url("/design/Zen_Background.jpg");
+	color:whitesmoke;
+	font-family:tahoma;
+	text-shadow:1px 1px 1px #FF0000;
+	
+}
+a:link{
+	text-decoration:none;
+	color:whitesmoke;
+}
+ul li{
+	list-style-type:none;
+	display:inline;
+}
+h1{
+	font-size:35px;
+	background-color:#E3F252;
+	color:#FF2321;
+	opacity:0.9;
+	width:8em;
+	padding:2%;
+	margin-bottom:0;
+	margin-left:8%;
+	position:relative;
+	top:50px;
+	bottom:90px;
+	z-index:2;
+	-webkit-transition: 8em 2s;
+	-moz-transition:8em 2s;
+	transition: 8em 2s;
+}
+h1:hover{
+	width:100%;
+}
+h2{
+	background-color:#D64749;
+	box-shadow:5px 5px 5px 5px #000000;
+	color:#CC041F;
+	width:100%;
+	height:175px;
+	font-size:85px;
+	text-align:center;
+	font-stretch:normal;
+	padding-top:35px;
+	padding-bottom:8px;
+	margin-top:0;
+	margin-bottom:5px;
+	position:relative;
+	z-index:1;
+	top:2px;
+}
+.summary p{
+	background-color:#26ABA3;
+	box-shadow:5px 5px 5px 5px #000000;
+	color:black;
+	opacity:0.8;
+	padding:1%;
+	margin:0;
+	width:1000px;
+	z-index:2;
+	position:relative;
+}
+h3{
+	text-align:center;
+}
+.preamble{
+	background-color:#85A663;
+	font-size:18px;
+	text-shadow:1px 1px #ff0000;
+	box-shadow:2px 2px 2px black;
+	height:150px;
+	width:800px;
+	margin-left:40%;
+	margin-bottom:0;
+	margin-right:0;
+	margin-top:3%;
+	padding:3% 5% 15% 5%;
+	position:relative;
+	top:50px;
+	right:100px;
+	z-index:1;
 
+}
+.explanation{
+	text-align:center;
+	text-shadow:1px 1px #ff0000;
+	background-color:#E3F252;
+	box-shadow:2px 2px 2px black;
+	opacity:1.0;
+	font-size:18px;
+	height:20%;
+	margin-right:30%;
+	margin-left:0;
+	margin-top:0;
+	padding-right:20%;
+	padding-left:5%;
+	padding-top:2%;
+	position:relative;
+	z-index:2;
+	
+	
+}
+.participation{
+	background-color:#D64749;
+	font-size:18px;
+	box-shadow:2px 2px 2px black;
+	margin-right:85px;
+	height:400px;
+	margin-left:0;
+	padding-right:80px;
+	padding-top:50px;
+	padding-left:5%;
+	position:relative;
+	top:130px;
+	bottom:40px;
+	z-index:1;
+}
+.benefits{
+	background-color:#2F8F75;
+	text-align:center;
+	box-shadow:2px 2px 2px black;
+	font-size:18px;
+	margin-right:0;
+	margin-left:450px;
+	margin-bottom:5%;
+	margin-top:5px;
+	width:825px;
+	height:200px;
+	padding:3%;
+	position:relative;
+	z-index:2;
+	
+}
+.requirements{
+	background-color:#D64749;
+	box-shadow:2px 2px 2px black;
+	margin-right:0;
+	margin-left:35%;
+	width:800px;
+	padding-right:1%;
+	padding-left:10%;
+	padding-top:1%;
+	padding-bottom:3%;
+	position:relative;
+	top:50px;
+	right:50px;
+	z-index:1;
+	
+}
+footer{
+	background-color:#E3F252;
+	box-shadow:2px 2px 2px black;
+	font-size:26px;
+	height:100px;
+	width:370px;
+	padding:5%;
+	padding-top:2%;
+	margin-left:0;
+	margin-top:-120px;
+	position:relative;
+	z-index:2;
+	
+	
+}
+.design-archives{
+	background-color:pink;
+	padding:2%;
+	width:100px;
+	height:175px;
+	font-size:18px;
+	float:right;
+	position:fixed;
+}
+.select{
+	background-color:#26ABA3;
+	box-shadow:1px 1px 1px black;
+	padding-left:3%;
+	padding:2%;
+	margin-left:3%;
+	width:50%;
+	margin-bottom:0;
+}
+.sidebar .design-selection nav ul li:nth-child(1){
+	background-color:#85A663;
+	width:175px;
+	height:150px;
+	margin:0 auto;
+	display:inline-block;
+	padding:1%;
+	position:relative;
+	top:60px;
+	left:160px;
+	z-index:1;
+}
+@-moz-keyframes spin{100%{-moz-transform:rotate(360deg);}}
+@-webkit-keyframes spin { 100% {-webkit-transform:rotate(360deg);}}
+@keyframes spin {100% {-webkit-transform:rotate(360);}}
 
-/* specific divs */
-.page-wrapper { 
-	background: url(zen-bg.jpg) no-repeat top left; 
-	padding: 0 175px 0 110px;  
-	margin: 0; 
-	position: relative;
-	}
-
-.intro { 
-	min-width: 470px;
-	width: 100%;
-	}
-
-header h1 { 
-	background: transparent url(h1.gif) no-repeat top left;
-	margin-top: 10px;
-	display: block;
-	width: 219px;
-	height: 87px;
-	float: left;
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-header h2 { 
-	background: transparent url(h2.gif) no-repeat top left; 
-	margin-top: 58px; 
-	margin-bottom: 40px; 
-	width: 200px; 
-	height: 18px; 
-	float: right;
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-header {
-	padding-top: 20px;
-	height: 87px;
+nav ul li:nth-child(even):hover{
+	-webkit-animation:spin 4s linear;
+	-moz-animation:spin 4s linear;
+	animation:spin 4s linear;
+	
+}
+nav ul li:nth-child(odd):hover{
+	-webkit-animation:spin 6s linear;
+	-moz-animation:spin 6s linear;
+	animation:spin 6s linear;
 }
 
-.summary {
-	clear: both; 
-	margin: 20px 20px 20px 10px; 
-	width: 160px; 
-	float: left;
-	}
-.summary p {
-	font: italic 1.1em/2.2 georgia; 
-	text-align: center;
-	}
+.sidebar .design-selection nav ul li:nth-child(2){
+	background-color:#0F5959;
+	display:inline-block;
+	width:200px;
+	height:170px;
+	margin:0 auto;
+	text-align:center;
+	padding:1%;
+    position:relative;
+	top:160px;
+	left:135px;
+	z-index:2;
+}
+.sidebar .design-selection nav ul li:nth-child(3){
+	background-color:#E3F252;
+	display:inline-block;
+	width:175px;
+	height:150px;
+	margin:0 auto;
+	padding:1%;
+	position:relative;
+	top:100px;
+	left:125px;
+	z-index:3;
+	
+}
+.sidebar .design-selection nav ul li:nth-child(4){
+	background-color:#85A663;
+	display:inline-block;
+	opacity:0.9;
+	width:175px;
+	height:150px;
+	margin:0 auto;
+	padding:1%;
+	position:relative;
+	top:150px;
+	left:75px;
+	z-index:4;
+ 
+	
+}
+.sidebar .design-selection nav ul li:nth-child(5){
+	background-color:#D64749;
+	display:inline-block;
+	margin:0 auto;
+	width:175px;
+	height:150px;
+	padding:1%;
+	position:relative;
+	top:75px;
+	left:85px;
+	z-index:5;
 
-.preamble {
-	clear: right; 
-	padding: 0px 10px 0 10px;
-	}
-.supporting {	
-	padding-left: 10px; 
-	margin-bottom: 40px;
-	}
+}
+.sidebar .design-selection nav ul li:nth-child(6){
+	background-color:#E3F252;
+	margin:0 auto;
+	display:inline-block;
+	width:190px;
+	height:150px;
+	padding:1%;
+	position:relative;
+	top:175px;
+	left:50px;
+	z-index:6;
+	
+}
+.sidebar .design-selection nav ul li:nth-child(7){
+	background-color:#0F5959;
+	margin:0 auto;
+	display:inline-block;
+	width:175px;
+	height:150px;
+	padding:1%;
+	position:relative;
+	top:80px;
+	left:40px;
+	z-index:7;
+	
+}
+.sidebar .design-selection nav ul li:nth-child(8){
+	background-color:#D64749;
+	margin:0 auto;
+	opacity:0.9;
+	width:175px;
+	height:150px;
+	display:inline-block;
+	padding:1%;
+	position:relative;
+	top:180;
+	left:25px;
+	z-index:8;
+}
 
-footer { 
-	text-align: center; 
-	}
-footer a:link, footer a:visited { 
-	margin-right: 20px; 
-	}
-
-.sidebar {
-	margin-left: 600px; 
-	position: absolute; 
-	top: 0; 
-	right: 0;
-	}
-.sidebar .wrapper { 
-	font: 10px verdana, sans-serif; 
-	background: transparent url(paper-bg.jpg) top left repeat-y; 
-	padding: 10px; 
-	margin-top: 150px; 
-	width: 130px; 
-	}
-.sidebar h3.select { 
-	background: transparent url(h3.gif) no-repeat top left; 
-	margin: 10px 0 5px 0; 
-	width: 97px; 
-	height: 16px; 
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-.sidebar h3.archives { 
-	background: transparent url(h5.gif) no-repeat top left; 
-	margin: 25px 0 5px 0; 
-	width:57px; 
-	height: 14px; 
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-.sidebar h3.resources { 
-	background: transparent url(h6.gif) no-repeat top left; 
-	margin: 25px 0 5px 0; 
-	width:63px; 
-	height: 10px; 
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-
-
-.sidebar ul {
-	margin: 0;
-	padding: 0;
-	}
-.sidebar li {
-	line-height: 1.3em; 
-	background: transparent url(cr1.gif) no-repeat top center; 
-	display: block; 
-	padding-top: 5px; 
-	margin-bottom: 5px;
-	list-style-type: none;
-	}
-.sidebar li a:link {
-	color: #988F5E;
-	}
-.sidebar li a:visited {
-	color: #B3AE94;
-	}
-
-
-.extra1 {
-	background: transparent url(cr2.gif) top left no-repeat; 
-	position: absolute; 
-	top: 40px; 
-	right: 0; 
-	width: 148px; 
-	height: 110px;
-	}
+.zen-resources{
+	background-color:pink;
+}
